# andino-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: CLAUDE.md  instructions.md  learnings.md  settings.json
.github/: dependabot.yml
.github/workflows/: release.yml
charts/andino/: Chart.yaml  values-sre.yaml  values.yaml
charts/andino/templates/: _helpers.tpl  configmap-skills.yaml  configmap.yaml  deployment.yaml  externalsecret.yaml  ingress.yaml  pvc.yaml  (+4 more)
deploy/: andino@.service
docs/: agent-yaml.md  api.md  architecture.md  channels.md  deployment.md  getting-started.md  hitl.md  tools-and-skills.md
examples/architect/: Dockerfile  agent.yaml  system_prompt.md
examples/coder/: Dockerfile  agent.yaml  system_prompt.md
examples/prospector/: agent.yaml  system_prompt.md
examples/researcher/: Dockerfile  agent.yaml  system_prompt.md
examples/reviewer/: Dockerfile  agent.yaml  system_prompt.md
examples/sre/: agent.yaml
src/andino/: __init__.py  __main__.py  agent_builder.py  agent_reference.py  approvals.py  config.py  hitl.py  home.py  log_context.py  mcp_loader.py  model_registry.py  server.py  service.py  session_tools.py  task_executor.py  tool_loader.py  usage.py
src/andino_sdk/: __init__.py  __main__.py  agent_builder.py  server.py  service.py  task_executor.py  tool_loader.py
tests/: conftest.py  test_agent_builder.py  test_agent_reference.py  test_apollo_tools.py  test_approvals.py  test_cli.py  test_config.py  test_confluence_tools.py  test_home.py  test_jira_tools.py  test_lifecycle_hooks.py  test_lusha_tools.py  test_memory.py  test_model_registry.py  test_retries.py  test_server.py  test_service.py  test_session_fork.py  test_slack_upload.py  test_strands_compat.py  test_task_executor.py  test_tool_loader.py  test_usage.py
tests/fixtures/: system_prompt.md  valid_agent.yaml
(+31 files in other folders)
