[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "andino-agent"
version = "0.1.0"
description = "Andino Agent — standalone autonomous agent runtime"
requires-python = ">=3.11"
dependencies = [
    "strands-agents>=1.0.0",
    "strands-agents-tools>=0.2.0",
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.27",
]

[project.optional-dependencies]
bedrock = ["boto3>=1.35"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
slack = ["slack-bolt[async]>=1.20"]
all = ["boto3>=1.35", "anthropic>=0.40", "openai>=1.50", "slack-bolt[async]>=1.20"]
test = ["pytest>=9.0", "pytest-asyncio>=0.25", "pytest-cov>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/andino"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "W", "F", "I", "B", "UP", "RUF"]
